--- a/.github/workflows/obs-container.yaml
+++ b/.github/workflows/obs-container.yaml
@@ -5,6 +5,7 @@ on:
     branches: [main]
     paths:
       - packaging/suse/*
+      - .github/workflows/obs-container.yaml
   release:
     types: [published]
   workflow_dispatch:
@@ -69,71 +70,3 @@ jobs:
           cd $DEST_FOLDER
           osc ar
           osc commit -m "New development version of $NAME released"
-
-  obs-commit-rpm:
-    name: Commit the RPM package on OBS
-    needs: [static-code-analysis, test]
-    runs-on: ubuntu-20.04
-    if: github.event_name == 'release' || (github.event_name == 'push' && github.ref_name == 'main') || github.event_name == 'workflow_dispatch'
-    container:
-      image: ghcr.io/trento-project/continuous-delivery:main
-      env:
-        OBS_USER: ${{ secrets.OBS_USER }}
-        OBS_PASS: ${{ secrets.OBS_PASS }}
-        OBS_PROJECT: ${{ vars.OBS_PROJECT }}
-        OSC_CHECKOUT_DIR: /tmp/trento-wanda-package
-        REPOSITORY: ${{ github.repository }}
-        FOLDER: packaging/suse/rpm
-      options: -u 0:0
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Configure OSC
-        run: |
-          mkdir -p $HOME/.config/osc
-          cp /home/osc/.config/osc/oscrc $HOME/.config/osc
-          /scripts/init_osc_creds.sh
-      - name: Prepare _service file
-        run: |
-          git config --global --add safe.directory /__w/wanda/wanda
-          VERSION=$(./hack/get_version_from_git.sh)
-          sed -i 's~%%REVISION%%~${{ github.sha }}~' $FOLDER/_service && \
-          sed -i 's~%%REPOSITORY%%~'"${REPOSITORY}"'~' $FOLDER/_service && \
-          sed -i 's~%%VERSION%%~'"${VERSION}"'~' $FOLDER/_service
-      - name: Setup rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: 1.66
-      - name: Get mix deps
-        run: mix local.hex --force && mix deps.clean --all && mix deps.get
-      - name: Cargo vendor
-        run: |
-          cd deps/rhai_rustler/native/rhai_rustler
-          cargo vendor
-          printf '\n\n[source.crates-io]\nreplace-with = "vendored-sources"\n\n[source.vendored-sources]\ndirectory = "vendor"\n' >> .cargo/config
-      - name: Create deps tarball
-        run: tar -c deps | gzip -n > deps.tar.gz          
-      - name: Checkout and prepare OBS package
-        run: |
-          osc checkout $OBS_PROJECT trento-wanda -o $OSC_CHECKOUT_DIR
-          cp $FOLDER/_service $OSC_CHECKOUT_DIR
-          cp $FOLDER/trento-wanda.spec $OSC_CHECKOUT_DIR
-          rm -vf $OSC_CHECKOUT_DIR/*.tar.gz
-          pushd $OSC_CHECKOUT_DIR 
-          osc service manualrun
-          cp  /__w/wanda/wanda/deps.tar.gz .
-      - name: Prepare trento-wanda.changes file
-        # The .changes file is updated only in release creation. This current task should be improved
-        # in order to add the current rolling release notes
-        if: github.event_name == 'release'
-        run: |
-          git config --global --add safe.directory /__w/wanda/wanda
-          VERSION=$(./hack/get_version_from_git.sh)
-          TAG=$(echo $VERSION | cut -f1 -d+)
-          hack/gh_release_to_obs_changeset.py $REPOSITORY -a shap-staff@suse.de -t $TAG -f $OSC_CHECKOUT_DIR/trento-wanda.changes
-      - name: Commit changes into OBS
-        run: |
-          pushd $OSC_CHECKOUT_DIR
-          osc ar
-          osc commit -m "GitHub Actions automated update to reference ${{ github.sha }}"
