--- a/.github/workflows/obs-rpm.yaml
+++ b/.github/workflows/obs-rpm.yaml
@@ -36,6 +36,7 @@ jobs:
           /scripts/init_osc_creds.sh
       - name: Prepare _service file
         run: |
+          git config --global --add safe.directory /__w/wanda/wanda
           VERSION=$(./hack/get_version_from_git.sh)
           sed -i 's~%%REVISION%%~${{ github.sha }}~' $FOLDER/_service
           sed -i 's~%%REPOSITORY%%~'"${REPOSITORY}"'~' $FOLDER/_service
@@ -67,6 +68,7 @@ jobs:
         # in order to add the current rolling release notes
         if: github.event_name == 'release'
         run: |
+          git config --global --add safe.directory /__w/wanda/wanda
           VERSION=$(./hack/get_version_from_git.sh)
           TAG=$(echo $VERSION | cut -f1 -d+)
           hack/gh_release_to_obs_changeset.py $REPOSITORY -a shap-staff@suse.de -t $TAG -f $OSC_CHECKOUT_DIR/trento-wanda.changes
