--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -58,7 +58,7 @@ jobs:
 
   static-code-analysis:
     name: Static Code Analysis
-    needs: [elixir-deps, api-bc-check]
+    needs: elixir-deps
     runs-on: ubuntu-24.04
     steps:
       - name: Cancel Previous Runs
@@ -95,7 +95,7 @@ jobs:
 
   test:
     name: Test
-    needs: [elixir-deps, api-bc-check]
+    needs: elixir-deps
     runs-on: ubuntu-24.04
     services:
       postgres:
