--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -280,6 +280,7 @@ jobs:
 
   deploy-demo:
     runs-on: ubuntu-24.04
+    if: vars.DEPLOY_DEMO == 'true'
     needs:
       - build-containers
     steps:
